# road-to-ai-coding

./: .gitignore  README.md  cs.code-workspace  java.code-workspace  py.code-workspace  road-to-ai-coding.code-workspace  road-to-ai-coding.sln  test_document.txt
checklists/: code-review-checklist.md
claude-code/: best-practices.md  commands.md  dev-guide-actions.md  dev-guide.md
claude-code/development-prompts/: claude-md-generator.md
configuration/: c-sharp.md
copilot/: commands.md  comment-driven-coding.md  debugging.md  inline-chat.md  mpc.md  python-extensions.md  scope-vs-context.md  sdlc.md
design/: PLAN-LIGHT.md  PLAN.md
design/data-structures/: CLAUDE.md
design/ood/ml-model-registry/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.yml  models.db  pyproject.toml
design/ood/ml-model-registry/app/: config.py  main.py
design/ood/ml-model-registry/app/api/routes/: models.py
design/ood/ml-model-registry/app/domain/exceptions/: exceptions.py
design/ood/ml-model-registry/app/domain/models/: audit.py  mappers.py  model.py  schemas.py
design/ood/ml-model-registry/app/infrastructure/repositories/: base.py  sqlalchemy_repositories.py
design/ood/ml-model-registry/app/infrastructure/storage/: database.py  file_storage.py  models.py  storage_factory.py
design/ood/ml-model-registry/app/services/: model_service.py
design/ood/ml-model-registry/app/tests/: test_api.py  test_artifact_operations.py  test_domain_models.py  test_file_storage.py  test_metrics_and_evaluation.py  test_model_lifecycle.py
design/ood/ml-model-registry/demos/: 01_basic_model_registration.py  02_model_lifecycle_management.py  03_evaluation_and_metrics.py  04_artifact_operations.py  05_end_to_end_workflow.py  README.md  run_demos.py
design/ood/ml-model-registry/examples/: hyperparameter_tuning.py  train_sample_model.py
design/oop/: CLAUDE.md  pyproject.toml  run_observer_demo.py
prompts/: engineering.md
prompts/00_foundation/: house-rules.md
prompts/10_planning/: user-stories.md
prompts/20_design/: api-design.md
prompts/30_coding/: implement-feature.md  safe-refactor-multi-file.md
research/dinov3/: pyproject.toml
research/dinov3/app/dinov3/: __init__.py
research/dinov3/app/dinov3/data/: __init__.py  dataset.py
research/dinov3/app/dinov3/models/: __init__.py  dino.py  vit.py
research/dinov3/app/dinov3/training/: __init__.py  trainer.py
research/dinov3/app/dinov3/utils/: __init__.py  visualization.py
research/dinov3/app/examples/: analyze_features.py  train_dino.py
research/dinov3/app/tests/: test_dinov3.py
research/spetral-invariance/: CLAUDE.md  demo_golomb.py  demo_maximality.py  demo_training.py  demo_validation.py  example_r1_l2_sequential.py  fix_pennylane_compatibility.py  pyproject.toml  validation_against_paper.py
research/spetral-invariance/demo_validation_output/: validation_summary.txt
research/spetral-invariance/spectral_qnn/: __init__.py
research/spetral-invariance/spectral_qnn/core/: __init__.py  frequency_analyzer.py  generators.py  qnn_pennylane.py  simple_qnn.py
research/spetral-invariance/spectral_qnn/maximality/: __init__.py  golomb_generators.py  two_dim_analysis.py
research/spetral-invariance/spectral_qnn/validation/: __init__.py  visualization.py
research/spetral-invariance/tests/: test_frequency_analyzer.py  test_generators.py  test_golomb_generators.py  test_maximality.py  test_paper_compliance.py  test_qnn_basic.py  test_simple_qnn.py  test_visualization.py
scripts/: scaffold.mjs
training/: python-apps-ideas.md
training/python-app-elevator/: CLAUDE.md  README.md  pyproject.toml  pytest.ini
training/python-app-elevator/elevator/: CLAUDE.md  __init__.py  api.py  app.py  elevator.py  models.py
training/python-app-elevator/elevator/static/: index.html  script.js  style.css
training/python-app-elevator/elevator/tests/: test_api.py  test_app.py  test_elevator.py  test_models.py
training/python-app-mpc/: CLAUDE.md  README.md  conftest.py  create_test_pdf.py  goose.db  pyproject.toml  pytest.ini  test_simple.py
training/python-app-mpc/app/: __init__.py  chunking.py  database.py  main.py  mcp_client.py  models.py
training/python-app-rag++/: CLAUDE.md  pyproject.toml
training/python-app-rag++/app/: app.py
training/python-app-rag++/app/models/: api.py
training/python-app-rag++/app/services/: adaptive_embedding_service.py  bm25_search.py  document_indexer.py  document_loader.py  feedback_scorer.py  hybrid_search.py  llm_service.py  mock_embedding_service.py  text_chunker.py  tfidf_embedding_service.py  vector_storage.py
training/python-app-rag++/app/tests/: test_app.py  test_integration.py
training/python-app-rag++/app/tests/test_services/: test_adaptive_embedding_service.py  test_bm25_search.py  test_document_indexer_hybrid.py  test_document_indexer_lightweight.py  test_document_loader.py  test_feedback_scorer.py  test_hybrid_search.py  test_llm_service.py  test_mock_embedding_service.py  test_text_chunker.py  test_tfidf_embedding_service.py  test_vector_storage.py
training/python-app-rag++/data/: demo_index.faiss  demo_index.json  lightweight_rag_index.faiss  lightweight_rag_index.json  test_pipeline_index.faiss  test_pipeline_index.json
training/python-app-rag++/docs/: api_design.md  bm25_search.md  feedback_systems.md  introduction.md  vector_embeddings.md
training/python-app-rfrl/: CLAUDE.md  pyproject.toml  test_setup.py
training/python-app-rfrl/app/: __init__.py
training/python-app-rfrl/app/api/: __init__.py
training/python-app-rfrl/app/core/: __init__.py
training/python-app-rfrl/app/models/: __init__.py
training/python-app-rfrl/app/scenarios/: __init__.py
training/python-app-rfrl/app/training/: __init__.py
training/python-app-template/: CLAUDE.md  pyproject.toml
training/python-app-template/app/: __init__.py
training/python-app-template/elevator/: CLAUDE.md
training/python-apps/: pyproject.toml  requirements.txt
training/python-apps/elevator/: CLAUDE.md
training/python-apps/helloworld/tests/: test_app.py
training/python-apps/nasa/: CLAUDE.md
(+189 files in other folders)
