# poetry install

[tool.poetry]
name = "spectral-invariance"
version = "0.1.0"
description = "Quantum Neural Networks Spectral Invariance Research - PennyLane Implementation"
authors = ["Research Team <research@example.com>"]

packages = [
  { include = "spectral_qnn" }
]

[tool.poetry.dependencies]
python = "^3.11"
# Use existing versions
pennylane = "^0.35.0"
numpy = "^2.0.0"
scipy = "^1.13.0"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
jupyter = "^1.0.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
