# poetry install

[tool.poetry]
name = "training-elevator"
version = "0.1.0"
description = "Training apps"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "elevator" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
elevator = "elevator.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
