# poetry install

[tool.poetry]
name = "training-app"
version = "0.1.0"
description = "Training apps"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
numpy = "^2.0.0"
gymnasium = "^0.29.0"
stable-baselines3 = "^2.1.0"
torch = "^2.0.0"
matplotlib = "^3.7.0"
celery = "^5.3.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
elevator = "app.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
