[tool.poetry]
name = "training-python"
version = "0.1.0"
description = "Training apps"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "helloworld" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
helloworld = "helloworld.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
