# poetry install

[tool.poetry]
name = "ml-model-registry"
version = "0.1.0"
description = "ML Model Registry Proof of Concept"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
python-multipart = "^0.0.5"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
black = "^23.0.0"
mypy = "^1.5.0"
faker = "^20.0.0"
pytest-mock = "^3.11.0"

[tool.poetry.scripts]
ml-registry = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
